add feature-env plugin & add spring cloud gateway staining plugin.